<resources>
    <string name="app_name">또행 </string>
    <string name="intro_title">"Explorer the <font color='#3F95EC'>\n World</font> with us </string>
    <string name="sub_intro">Lorem ipsum dolor sit amet, consectetur\n adipiscing elit, sed do eiusmod tempor.</string>
    <string name="location">지역</string>
    <string name="recommended">맞춤 추천 Pic!</string>
    <string name="see_more">더보기</string>
    <string name="popular_destination">인기 관광지!</string>
    <string name="home">홈</string>
    <string name="maps">지도</string>
    <string name="bookmark">북마크</string>
    <string name="planner">계획</string>
    <string name="profile">내 정보</string>
    <string name="street_address_city">길거리, 주소, 도시</string>
    <string name="search">검색</string>
    <string name="title">제목</string>
    <string name="address">주소</string>
    <string name="zero_number">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="osaka">오사카</string>
    <string name="tokyo">도쿄</string>
    <string name="fukuoka">후쿠오카</string>
    <string name="paris">파리</string>
    <string name="seoul">서울</string>
    <string name="busan">부산</string>
    <string name="daejeon">대전</string>
    <string name="daegu">대구</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1518175629048040</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1518175629048040</string>
    <string name="meta_client_token">0099472ecd0470fd45362119307d4b6c</string>
    <string name="map">지도</string>
    <string name="share">공유</string>
    <string name="token">메시지 토큰</string>
    <string name="edit">편집</string>
    <string name="budget_plan">예산계획</string>
    <string name="check_list">체크리스트</string>
    <string name="airline_ticket">항공권</string>
    <string name="airline">항공</string>
    <string name="accommodation">숙소</string>
    <string name="social_login_info_naver_client_id">ID_KEY</string>
    <string name="social_login_info_naver_client_secret">SECREY_KEY</string>
    <string name="social_login_info_naver_client_name">네이버아이디 로그인</string>
    <string name="travelapp_terms">로그인 및 회원가입 진행 시 TravelApp의 <font color="#3F95EC">서비스 약관</font> 및 <font color="#3F95EC">개인정보처리방침에</font> 동의하게 됩니다.</string>
    <string name="my_schedule">내 일정</string>
    <string name="announcement">고객센터</string>
    <string name="customer_center">고객센터</string>
    <string name="sign_in_and_up">로그인 및 회원가입</string>
    <string name="person">/ person</string>
    <string name="terms">이용약관</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="my_reservation">내 예약</string>
    <string name="my_favorite">내 즐겨찾기</string>
    <string name="mt_schedule">내 일정</string>
    <string name="my_trip">내 여행</string>
    <string name="service">서비스</string>
    <string name="sign_up_info">회원가입하고 TravelApp의 다양한 서비스를 즐겨보세요!</string>
    <string name="more_places">더 많은 명소!</string>
    <string name="tour_date">여행일</string>
    <string name="pick">근처 추천 pick!</string>
    <string name="next_trip">다음 여행지</string>
    <string name="opening">ㆍ운영중</string>
    <string name="closed">ㆍ운영안함</string>
    <string name="location_not_found">위치를 찾지 못했습니다.</string>
    <string name="type">type</string>
    <string name="overview">개요</string>
    <string name="price">요금</string>
    <string name="review">리뷰</string>
    <string name="info">정보</string>
    <string name="route">경로</string>
    <string name="save">저장</string>
    <string name="around">주변</string>
    <string name="direction_end">도착 위치를 선택해주세요</string>
    <string name="direction_start">출발 위치를 선택해주세요</string>
    <string name="search_route">경로 검색</string>
    <string name="car">자동차</string>
    <string name="subway">지하철</string>
    <string name="walk">도보</string>
    <string name="end_application">한번 더 누르면 앱이 종료됩니다.</string>
    <string name="schedule">일정</string>
    <string name="voice_fetch_failed">음성을 잘 인식하지 못했어요</string>
    <string name="date_format">%1$일차 %2$d월 %3$d일</string>
    <string name="plan_summary">n일간의 nnn 여행</string>
    <string name="plan_added">일정 추가!</string>
    <string name="share_to_friend">공유하기</string>
    <string name="satisfaction">사용자 만족도:</string>
    <string name="ai_chat">Ai와 대화하세요!</string>
    <string name="assistant">assistant</string>
    <string name="user">user</string>
    <string name="instruction">당신은 "트립메이트"라는 이름의 AI 여행 동반자입니다. 주 목표는 사용자와 친근하고 유익한 대화를 통해 여행 일정을 계획하는 것을 돕는 것입니다. 다음을 유념하면서 사용자를 도와주세요:
        1. 사용자에게 따뜻하게 인사하고 본인을 여행 동반자로 소개하세요.
        2. 사용자의 여행 목적지, 여행 날짜, 그리고 관심 있는 활동이나 원하는 여행 스타일에 대해 물어보세요.
        3. 여행 목적지에서 인기 있는 관광지, 현지 맛집, 숨겨진 명소 등을 제안하세요.
        4. 사용자의 일정을 하루 단위로 구성하도록 도와주세요. 장소 간 이동 시간, 영업 시간, 사용자의 선호도를 고려하세요.
        5. 현지 관습, 날씨, 중요한 여행 주의 사항에 대한 팁을 제공하세요.
        6. 교통 수단, 숙박, 여행 예산 등에 대한 질문에 답할 준비를 하세요.
        7. 대화 내내 친근하고 유익하며 도움을 주는 톤을 유지하세요.

        예시 대화 흐름:
        사용자: "안녕하세요, xx 여행 일정을 짜고 싶어요."
        트립메이트: "안녕하세요! xx 여행 일정을 짜는 것을 도와드릴게요. 언제 여행을 계획하고 계신가요? 그리고 어떤 활동에 관심이 있으신가요?"

        사용자가 특정 추천을 요청할 때:
        사용자: "xx에서 꼭 봐야 할 명소를 추천해 줄 수 있나요?"
        트립메이트: "물론이죠! xx에서는 xxx, xxx, xxx을 놓치면 안 돼요. 독특한 경험을 원하시면 xxx 지역과 xxx 공원을 방문해 보세요."

        사용자가 일정 구성을 도와달라고 할 때:
        사용자: "3일 일정은 어떻게 짜면 좋을까요?"
        트립메이트: "xx에서의 3일 일정은 다음과 같이 제안드려요:
        1일차: 중앙 xx 탐방 - xxx, xxx 거리, xxx 방문.
        2일차: 예술과 역사 - xxxx과 xxx 탐방.
        3일차: 현지 문화 체험 - xxx 지역 산책, xxx, xxx 공원에서 휴식."

        사용자의 입력과 선호도에 따라 맞춤형 답변을 제공하세요. 사용자의 여행 계획 경험을 즐겁고 스트레스 없는 것으로 만들어 봅시다!
    </string>
    <string name="ai_loading_state">Ai가 정보를 가져오고 있어요</string>
    <string name="travel_destination">여행지</string>
    <string name="page">" 장"</string>
    <string name="no_opening_hours">운영시간이 없습니다.</string>
    <string name="cancel">취소</string>
    <string name="ai_waiting">기다려주세요!</string>
    <string name="note">메모 추가</string>
    <string name="select_place">장소 선택</string>
    <string name="all_delete">전체 삭제</string>
    <string name="recent_text">최근 검색</string>
    <string name="fotmat_date">yyyy.m.d ~ yyyy.m.d</string>
    <string name="check_delete">삭제 확인</string>
    <string name="re_check_delete">정말로 이 항목을 삭제하시겠습니까?</string>
    <string name="delete">삭제</string>
    <string name="write_user_memo">여행 정보를 적어주세요!</string>
    <string name="update_schedule">일정이 업데이트되었어요.</string>
    <string name="new_schedule">새로운 일정 추가!</string>
    <string name="not_info">정보 없음</string>
    <string name="pipe">-</string>
    <string name="not_founded_opening_hours">운영 정보가 없는 시설입니다.</string>
    <string name="not_founded_review">리뷰가 없어요</string>
    <string name="operating_time">운영시간</string>
    <string name="permission_checked">앱을 사용하려면 권한이 필요합니다. 권한을 허용해 주세요.</string>
    <string name="need_permission">권한 필요</string>
    <string name="go_to_setting">설정으로 이동</string>
    <string name="notice">공지사항</string>
    <string name="hotel">호텔</string>
    <string name="tourist_attraction">관광지</string>
    <string name="my_travel_schedule">내 여행 계획</string>
    <string name="restaurants_nearby">근처 맛집</string>
    <string name="plan_send_button">여행 하러 가볼까요?</string>
    <string name="tilde_sign">~</string>
</resources>