<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/nav_home"
    android:icon="@drawable/bottom_btn1"
    android:title="@string/home"
    app:cnb_backgroundColor="@color/blue"
    app:cnb_iconColor="@color/white"
    />
    <item
        android:id="@+id/nav_maps"
        android:icon="@drawable/bottom_btn2"
        android:title="@string/maps"
        app:cnb_backgroundColor="@color/blue"
        app:cnb_iconColor="@color/white"
        />
    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/bottom_btn3"
        android:title="@string/schedule"
        app:cnb_backgroundColor="@color/blue"
        app:cnb_iconColor="@color/white"
        />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/bottom_btn4"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/blue"
        app:cnb_iconColor="@color/white"
        />

</menu>