<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_main_content"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="400dp"
        app:layout_constraintHeight_min="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.circleImageView.5"
        app:srcCompat="@drawable/ic_my_trip_back" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/dark_blue"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_main_content" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/zero_number"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <RatingBar
        android:id="@+id/rb_score"
        style="@android:style/Widget.DeviceDefault.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:indeterminate="false"
        android:numStars="5"
        android:progressTint="@color/yellow"
        android:stepSize="0.5"
        android:transformPivotX="0dp"
        android:transformPivotY="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
        app:layout_constraintStart_toEndOf="@+id/tv_rating"
        app:layout_constraintTop_toTopOf="@+id/tv_rating" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_rating"
        app:layout_constraintTop_toBottomOf="@+id/rb_score">

        <TextView
            android:id="@+id/tv_satisfaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:maxEms="10"
            android:ellipsize="end"
            android:visibility="gone"
            android:text="@string/satisfaction"
            android:textColor="@color/dark_blue"
            />

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:maxLines="2"
            android:maxEms="10"
            android:ellipsize="end"
            android:text="@string/review"
            android:textColor="@color/dark_blue"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>