<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/bg_maps_search_items">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/siv_search_list_item"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.circleImageView.15"
        app:srcCompat="@drawable/img_bg_title" />

    <TextView
        android:id="@+id/tv_search_list_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/title"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/siv_search_list_item"
        app:layout_constraintTop_toTopOf="@+id/siv_search_list_item" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_number"
        app:layout_constraintStart_toStartOf="@+id/tv_search_list_item_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_list_item_title" />

    <TextView
        android:id="@+id/tv_search_list_item_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/info"
        app:layout_constraintBottom_toBottomOf="@+id/siv_search_list_item"
        app:layout_constraintStart_toStartOf="@+id/tv_search_list_item_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

    <RatingBar
        android:id="@+id/rb_score"
        style="@android:style/Widget.DeviceDefault.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:indeterminate="false"
        android:numStars="5"
        android:progressTint="@color/yellow"
        android:rating="5"
        android:stepSize="0.5"
        android:transformPivotX="0dp"
        android:transformPivotY="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
        app:layout_constraintStart_toEndOf="@+id/tv_rating"
        app:layout_constraintTop_toTopOf="@+id/tv_rating" />

    <ImageView
        android:id="@+id/tv_favorite"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:scaleType="centerCrop"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_favorite" />


</androidx.constraintlayout.widget.ConstraintLayout>