<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/bg_white_solid_corner"
    android:elevation="3dp"
    android:paddingBottom="5dp">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/siv_recommended_item_main_img"
        android:layout_width="240dp"
        android:layout_height="130dp"
        android:layout_margin="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.circleImageView.15"
        app:srcCompat="@drawable/avd_splash" />

    <TextView
        android:id="@+id/tv_recommended_item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/dark_blue"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/iv_recommended_item_star"
        app:layout_constraintStart_toStartOf="@+id/siv_recommended_item_main_img"
        app:layout_constraintTop_toBottomOf="@+id/siv_recommended_item_main_img" />

    <TextView
        android:id="@+id/tv_recommended_item_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5"
        android:textColor="@color/dark_blue"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_recommended_item_title"
        app:layout_constraintEnd_toEndOf="@+id/siv_recommended_item_main_img"
        app:layout_constraintTop_toTopOf="@+id/tv_recommended_item_title" />

    <ImageView
        android:id="@+id/iv_recommended_item_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/tv_recommended_item_score"
        app:layout_constraintEnd_toStartOf="@+id/tv_recommended_item_score"
        app:layout_constraintTop_toTopOf="@+id/tv_recommended_item_score"
        app:srcCompat="@drawable/star" />

    <ImageView
        android:id="@+id/iv_recommended_item_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toStartOf="@+id/tv_recommended_item_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_recommended_item_title"
        app:srcCompat="@drawable/location" />

    <TextView
        android:id="@+id/tv_recommended_item_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/address"
        app:layout_constraintBottom_toBottomOf="@+id/iv_recommended_item_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_recommended_item_location"
        app:layout_constraintTop_toTopOf="@+id/iv_recommended_item_location" />

    <TextView
        android:id="@+id/tv_recommended_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="₩0"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/iv_recommended_item_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_recommended_item_address" />

    <TextView
        android:id="@+id/tv_recommended_item_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/person"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/tv_recommended_item_price"
        app:layout_constraintStart_toEndOf="@+id/tv_recommended_item_price"
        app:layout_constraintTop_toTopOf="@+id/tv_recommended_item_price" />


</androidx.constraintlayout.widget.ConstraintLayout>